- Added Arquebusier class for Man-at-Arms
- Ported gunsmithing recipes from Solaris
- Iron spheres can be smithed using the anvil in a batch of 5 per 1 iron bar
- Gunparts can be made by an artificer
- Iron breastplate has been reclassified as light armor
- Scabbards added to all combat roles
- HEADEATER added under the Marshall's Tower, just behind the gallows scaffold.
- Refactored firearms damage, they can now pierce plate armor and cause piercing damage
- Reverted TGUI for anvil
- Added cheat tunnel at Fallen Gate
- Added mana fountain at hotspring
- Added lava in the western caves.
- Marshall no longer gets advanced classes, they spawn with Justice, Marshall jupon and brigandine.
- Marshall gets expert firearms skill.
- New elemental dungeon added in Dreadwood, THE SOUTHGUARD CAVERNS by Dino
- Marshall spawns with rich pouch in their backpack
- Duke's arrival is announced with a cool sound
- Duke's subclass Valiant Warrior spawns with a set of royal armor and a royal heirloom sword
-- They gain heavy armor and medium armor trait
- Vaquero class reactivated
- Grudgebearer armor max integrity set to 4000
- Swashbuckler now has a pistol with expert firearms skill
- Added musketeer class for adventurer ranger