@@ -17,8 +17,8 @@ GLOBAL_VAR(string_filename_current_key)
 	else
 		CRASH("strings list not found: [directory]/[filename], index=[key]")
 
-/proc/strings(filename as text, key as text, directory = "strings")
-	load_strings_file(filename, directory)
+/proc/strings(filename as text, key as text, directory = "strings", convert_HTML = FALSE)
+	load_strings_file(filename, directory, convert_HTML)
 	if((filename in GLOB.string_cache) && (key in GLOB.string_cache[filename]))
 		return GLOB.string_cache[filename][key]
 	else
@@ -27,7 +27,12 @@ GLOBAL_VAR(string_filename_current_key)
 /proc/strings_subkey_lookup(match, group1)
 	return pick_list(GLOB.string_filename_current_key, group1)
 
-/proc/load_strings_file(filename, directory = "strings")
+/proc/special_chars_to_html_tags(list/strings)
+	for (var/key in strings)
+		strings[replacetext(key, "\'", "&#39;")] = strings[key]
+	return strings
+
+/proc/load_strings_file(filename, directory = "strings", convert_HTML)
 	GLOB.string_filename_current_key = filename
 	if(filename in GLOB.string_cache)
 		return //no work to do
@@ -38,4 +43,6 @@ GLOBAL_VAR(string_filename_current_key)
 	if(fexists("[directory]/[filename]"))
 		GLOB.string_cache[filename] = json_load("[directory]/[filename]")
 	else
-		CRASH("file not found: [directory]/[filename]")
+		if (convert_HTML)
+			if ("full" in GLOB.string_cache[filename])
+				GLOB.string_cache[filename]["full"] = special_chars_to_html_tags(GLOB.string_cache[filename]["full"])
