@@ -5,39 +5,42 @@
 	switch(H.char_accent)
 		if("No accent")
 			return
+		if("No accent")
+			return
 		if("Dwarf accent")
-			return strings("dwarfcleaner_replacement.json", type)
-		if("Dwarf Gibberish accent")
-			return strings("dwarf_replacement.json", type)
+			return strings("dwarfcleaner_replacement.json", type, convert_HTML = TRUE)
 		if("Dark Elf accent")
-			return strings("french_replacement.json", type)
-		if("Elf accent")
-			return strings("russian_replacement.json", type)
+			return strings("french_replacement.json", type, convert_HTML = TRUE)
+		if("Snow Elf accent")
+			return strings("russian_replacement.json", type, convert_HTML = TRUE)
 		if("Grenzelhoft accent")
-			return strings("german_replacement.json", type)
+			return strings("german_replacement.json", type, convert_HTML = TRUE)
 		if("Hammerhold accent")
-			return strings("Anglish.json", type)
+			return strings("Anglish.json", type, convert_HTML = TRUE)
 		if("Assimar accent")
-			return strings("proper_replacement.json", type)
+			return strings("proper_replacement.json", type, convert_HTML = TRUE)
 		if("Lizard accent")
-			return strings("brazillian_replacement.json", type)
+			return strings("brazillian_replacement.json", type, convert_HTML = TRUE)
 		if("Tiefling accent")
-			return strings("spanish_replacement.json", type)
+			return strings("spanish_replacement.json", type, convert_HTML = TRUE)
 		if("Half Orc accent")
-			return strings("middlespeak.json", type)
+			return strings("middlespeak.json", type, convert_HTML = TRUE)
 		if("Urban Orc accent")
-			return strings("norf_replacement.json", type)
+			return strings("norf_replacement.json", type, convert_HTML = TRUE)
 		if("Hissy accent")
-			return strings("hissy_replacement.json", type)
+			return strings("hissy_replacement.json", type, convert_HTML = TRUE)
 		if("Inzectoid accent")
-			return strings("inzectoid_replacement.json", type)
+			return strings("inzectoid_replacement.json", type, convert_HTML = TRUE)
 		if("Feline accent")
-			return strings("feline_replacement.json", type)
+			return strings("feline_replacement.json", type, convert_HTML = TRUE)
 		if("Slopes accent")
-			return strings("welsh_replacement.json", type)
+			return strings("welsh_replacement.json", type, convert_HTML = TRUE)
 
 /datum/species/proc/get_accent(mob/living/carbon/human/H)
 	return get_accent_list(H,"full")
+
+/datum/species/proc/get_accent_multiword(mob/living/carbon/human/H)
+	return get_accent_list(H,"multiword")
 
 /datum/species/proc/get_accent_any(mob/living/carbon/human/H) //determines if accent replaces in-word text
 	return get_accent_list(H,"syllable")
@@ -56,12 +59,56 @@
 /datum/species/proc/handle_speech(datum/source, mob/speech_args)
 	var/message = speech_args[SPEECH_MESSAGE]
 
-	message = treat_message_accent(message, strings("accent_universal.json", "universal"), REGEX_FULLWORD)
+	//message = treat_message_accent(message, strings("accent_universal.json", "universal"), REGEX_FULLWORD)
 
+	message = treat_message_accent(message, get_accent_multiword(source), REGEX_FULLWORD)
+	message = treat_message_accent_fullword(message, strings("accent_universal.json", "universal", convert_HTML = TRUE), get_accent(source))
+	message = treat_message_accent(message, get_accent_start(source), REGEX_STARTWORD)
+	message = treat_message_accent(message, get_accent_end(source), REGEX_ENDWORD)
+	message = treat_message_accent(message, get_accent_any(source), REGEX_ANY)
 	message = autopunct_bare(message)
 
 	speech_args[SPEECH_MESSAGE] = trim(message)
 
+/proc/get_value_from_accent(key, list/accent_list)
+	if (!key)
+		return
+	if (!accent_list)
+		return
+	var/value = accent_list[key]
+	if (!value)
+		value = accent_list[lowertext(key)]
+	if (!value)
+		value = accent_list[uppertext(key)]
+	if (!value)
+		value = accent_list[capitalize(key)]
+	return value
+
+/*
+	full word replacement proc for accents that only iterates through each word in the chat message instead of every entry in the json
+	takes both universal accent and the selected accent and applies them both at once
+*/
+/proc/treat_message_accent_fullword(message, list/universal, list/accent_list)
+	if(!message)
+		return
+	if(!accent_list && !universal)
+		return message
+	if(message[1] == "*")
+		return message
+	message = "[message]"
+	var/list/message_words = splittext_char(message, regex("\[^(&#39;|\\w)\]+"))
+	for (var/key in message_words)
+		var/value = get_value_from_accent(key, accent_list)
+		if (!value)
+			value = get_value_from_accent(key, universal)
+		if (!value)
+			continue
+		if (islist(value))
+			value = pick(value)
+		message = replacetextEx(message, regex("\\b[uppertext(key)]\\b|\\A[uppertext(key)]\\b|\\b[uppertext(key)]\\Z|\\A[uppertext(key)]\\Z", "(\\w+)/g"), uppertext(value))
+		message = replacetextEx(message, regex("\\b[capitalize(key)]\\b|\\A[capitalize(key)]\\b|\\b[capitalize(key)]\\Z|\\A[capitalize(key)]\\Z", "(\\w+)/g"), capitalize(value))
+		message = replacetextEx(message, regex("\\b[key]\\b|\\A[key]\\b|\\b[key]\\Z|\\A[key]\\Z", "(\\w+)/g"), value)
+	return message
 
 /proc/treat_message_accent(message, list/accent_list, chosen_regex)
 	if(!message)
