@@ -184,6 +184,9 @@
     "end": {
 
     },
+	"multiword": {
+
+	},
     "syllable": {
 
     }
