@@ -91,6 +91,8 @@
 		"wolfpit": "volfpit",
 		"PQ": "reputation",
 		"sergant":  "sargent",
+		"retard": "dimwit",
+		"retarded": "dimwitted",
 		"zaelorian": "zizo"
     }
 }
