@@ -8,6 +8,9 @@
 	"end": {
 		"ish": "ishh"
 	},
+	"multiword": {
+
+	},
 	"syllable": {
 		"th": "thh",
 		"sh": "shh",
