@@ -1417,6 +1417,9 @@
     "end": {
 
     },
+	"multiword": {
+
+	},
     "syllable": {
 
     }
