@@ -11,6 +11,9 @@
     "end": {
 
     },
+	"multiword": {
+
+	},
     "syllable": {
         "f": "fv",
         "m": "mm",
