@@ -3,12 +3,13 @@
         "axe": "axt",
         "bad": "schlecht",
         "beautiful": "schön",
-        "big": "groß",
-        "great": "groß",
+		"big": "groß",
+        "great": "großartig",
         "good bye": ["auf wiedersehen", "tschüss"],
         "goodbye": ["auf wiedersehen", "tschüss"],
-        "idiot": "schweinhund",
-        "dumb": "dummkopf",
+        "swine": "schweinhund",
+		"you swine": "du schweinhund",
+        "idiot": "dummkopf",
         "cake": "kuchen",
         "captain": "kapitän",
         "cat": "katze",
@@ -20,16 +21,23 @@
         "flower": "blume",
         "friend": "freund",
         "god": "gott",
+		"goddess": "göttin",
         "good": "gut",
-        "hello": ["hallo", "guten tag"],
+		"good day": "guten tag",
+		"good dae": "guten tag",
+        "hello": "hallo",
         "helmet": "helm",
         "house": "haus",
         "lance": "lanze",
         "love": "liebe",
         "mom": "mutter",
         "my": "mein",
+		"myself": "ich selbst",
         "no": "nein",
+		"nobody": "niemand",
+		"no one": "niemand",
         "old": "alt",
+		"self": "selbst",
         "shit": "scheiße",
         "shield": "schild",
         "shi": "schii",
@@ -37,22 +45,25 @@
         "spear": "speer",
         "sun": "sonne",
         "sword": "schwert",
+		"thank": "dank",
         "thanks": "danke",
         "thank you": "danke",
-        "the": "die",
-        "thi": "tii",
+        "the": ["die", "der", "das"],
         "ugly": "hässlich",
         "very": "sehr",
         "water": "wasser",
         "wine": "wein",
-        "wind": "wind",
         "with": "mit",
         "yes": "ja",
         "young": "jung",
         "soldier": "soldat",
         "knight": "ritter",
         "kingdom": "königreich",
+		"dukedom": "herzogtum",
         "king": "könig",
+		"duke": "herzog",
+		"queen": "königin",
+		"duchess": "herzogin",
         "princess": "prinzess",
         "prince": "prinz",
         "dwarf": "zwarf",
@@ -63,16 +74,33 @@
         "forest": ["wald", "forst"],
         "necromancer": "nekromant",
         "demon": "dämon",
+		"daemon": "dämon",
         "vampire": "vampir",
         "black": "schwarz",
         "church": "kirche",
         "is": "ist",
-        "queen": "königin",
-        "bog": ["moor", "sumpf"],
+        "bog": "moor",
+		"swamp": "sumpf",
         "town": "stadt",
         "an": "eine",
-        "fellow": "kollege",
-        "colleague": "kollege"
+        "fellow": "gefährte",
+        "colleague": "kollege",
+		"goblin": "gremlin",
+		"goblins": "gremlins",
+		"please": "bitte",
+		"help": "hilfe",
+		"help me": "hilf mir",
+		"damn": "verdammt",
+		"damn it": "verdammt nochmal",
+		"whoreson": "hurensohn",
+		"good evening": "guten abend",
+		"good night": "gute nacht",
+		"understood": "jawohl",
+		"wonderful": "wunderbar",
+		"many thanks": "vielen dank",
+		"of course": "natürlich",
+		"i": "ich",
+		"and": "und"
     },
     "start": {
 
@@ -80,7 +108,10 @@
     "end": {
 
     },
-    "syllable": {
+	"multiword": {
 
+	},
+    "syllable": {
+        "thi": "tii"
     }
 }
