@@ -8,6 +8,9 @@
     "end": {
 
     },
+	"multiword": {
+
+	},
     "syllable": {
         "b": "b'",
         "f": "fh",
