@@ -8,6 +8,9 @@
     "end": {
 
     },
+	"multiword": {
+
+	},
     "syllable": {
         "a": "æ",
         "b": "b'",
