@@ -499,6 +499,9 @@
         "tial": "shul",
         "tion": "shun"
     },
+	"multiword": {
+
+	},
     "syllable": {
         "ck": "kk",
         "ct": "k",
