@@ -8,6 +8,9 @@
     "end": {
 
     },
+	"multiword": {
+
+	},
     "syllable": {
 		"c": "k",
 		"kh": "ch",
