@@ -25,6 +25,9 @@
     "end": {
 
     },
+	"multiword": {
+
+	},
     "syllable": {
         "shi": "chee",
         "thi": "thee",
